# tkbanner

./: LICENSE  README.md  pyproject.toml  setup.py
tkbanner/: __init__.py  banner.py  extractor.py
