[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tkbanner"
version = "0.1.0"
description = "Video banner with animated frames using Tkinter"
readme = "README.md"
requires-python = ">=3.7"
authors = [
  { name = "Олексій Демчук" }
]
dependencies = [
  "Pillow"
]

[project.urls]
Homepage = "https://github.com/Alexei54/tkbanner"
